Allow libraries in the left hand side to be collapsed by default. Fixes #411

--- a/src/app/workflow-spec-list/workflow-spec-list.component.scss
+++ b/src/app/workflow-spec-list/workflow-spec-list.component.scss
@@ -75,6 +75,11 @@
 }
 
 
+.library-selected {
+  font-weight: bold;
+}
+
+
 .workflow-spec-actions {
   button {
     margin-right: 1em;
